--- a/clouddoc.html
+++ b/clouddoc.html
@@ -349,7 +349,7 @@ PostNote(Url, UserName, NoteID, AppKey)
 2.直链访问可以撰写静态网页内容, 比如HTML+JavaScript等等, 只需要将内容写入后将文档加密关闭即可!
 3.POST请求获取文档功能永久免费, 会员售卖价格可能会随着节假日随机打折优惠, 需要的不要错过哦!
 总结: GET请求需VIP, POST请求永久免费, 两者皆可获取文档内容.
-我们承诺用户永远不, 如若出现BUG和线路失效等, 我们会第一时间修复.
+我们承诺用户永远不跑路, 如若出现BUG和线路失效等, 我们会第一时间修复.
 为了您更长久更稳定的使用该程序, 请支援我们, 谢谢！
 为了不影响用户使用体验, 本程序暂不开设单独支援通道, 用户购买VIP就代表了您对我们的支持!
 再次感谢您对我们的支持!
